--- a/Fetch_functional_practice/index.html
+++ b/Fetch_functional_practice/index.html
@@ -8,7 +8,13 @@
     <title>Fetch functional</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div>
+        <button><</button>
+        <span class="number_id">1</span>
+        <button>></button>
+      </div>
+    </div>
     <script src="./fetch.js"></script>
   </body>
 </html>
