--- a/Lesson_15_20_02_localStorage/index.html
+++ b/Lesson_15_20_02_localStorage/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="form_div">
       <form id="form_elem">
-        <input name="name" type="tex" placeholder="Name" required />
+        <input name="name" type="text" placeholder="Name" required />
         <input name="lastname" type="text" placeholder="Lastname" required />
         <input type="submit" />
       </form>
